# tabby-sync-unofficial

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README-en.md  README.md
.github/workflows/: ali_image_build.yml  docker_image_build.yml  ghcr_image_build.yml
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ConfigsTable.tsx  CreateUserDialog.tsx  DeleteUserDialog.tsx  ExportConfigsDialog.tsx  ImportConfigsDialog.tsx  RotateTokenDialog.tsx
frontend/components/: DisplayChanger.tsx
frontend/components/ui/: file-uploader.tsx  float-label-input.tsx
frontend/i18n/: LanguageChanger.tsx  index.js  translations.en.json  translations.zh.json
frontend/lib/: type.ts  utils.ts
migrations/: 20240715020200_init.sql
src/: main.rs
src/utils/: crypto.rs  data_type.rs  digest.rs  mod.rs
